--- a/src/config/inversion-fixes.config
+++ b/src/config/inversion-fixes.config
@@ -1177,6 +1177,13 @@ NO INVERT
 
 ================================
 
+scipy.org
+
+INVERT
+.math < img
+
+================================
+
 scotch.io
 
 INVERT
